--- a/colorix/vercel.json
+++ b/colorix/vercel.json
@@ -1,4 +1,5 @@
 {
+  "rootDirectory": "colorix",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
