Add vercel.json to fix SPA routing on Vercel deployment

--- a/colorix/vercel.json
+++ b/colorix/vercel.json
@@ -1,6 +1,5 @@
 {
-  "rootDirectory": "colorix",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd colorix && npm run build",
+  "outputDirectory": "colorix/dist",
   "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
